# sandseal

./: .gitignore  README.md  test-vectors.json
.github/workflows/: ci.yml
cli/: Cargo.toml
cli/agents/: Dockerfile  Dockerfile.base  Dockerfile.overlay  apt-wrapper.sh  docker-compose.yml  entrypoint.sh
cli/agents/claude/: command.json  install-user.sh
cli/crates/sandseal/: Cargo.toml
cli/crates/sandseal-protocol/: Cargo.toml
cli/crates/sandseal-protocol/src/: message.rs
cli/crates/sandseal/src/: cli.rs  logging.rs  main.rs
cli/crates/sandseal/src/auth/: device_flow.rs  token.rs
cli/crates/sandseal/src/config/: merge.rs  mod.rs  schema.rs  validate.rs
cli/crates/sandseal/src/crypto/: encrypt.rs  keys.rs  mod.rs  pairing.rs  session.rs
cli/crates/sandseal/src/docker/: build.rs  compose.rs  image.rs  mod.rs  runtime.rs  tty.rs
cli/crates/sandseal/src/network/: port.rs
cli/crates/sandseal/src/path/: exclusion.rs  inclusion.rs  mod.rs  resolve.rs
cli/crates/sandseal/src/remote/: bridge.rs  chat.rs  connect.rs  mod.rs  overlay.rs  pair.rs  relay.rs  terminal.rs
cli/crates/sandseal/src/sandbox/: cleanup.rs  hooks.rs  instance.rs  mod.rs
cli/crates/sandseal/tests/: crypto_vectors.rs
cli/schema/: settings.schema.json
scripts/: install-dev.sh  install.sh  uninstall.sh
