[workspace]
resolver = "2"
members = ["crates/sandseal", "crates/sandseal-protocol"]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
authors = ["qwxxn <qwuin.business@gmail.com>"]

[workspace.dependencies]
anyhow = "1"
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4", features = ["derive", "env"] }

# Crypto
x25519-dalek = { version = "2", features = ["static_secrets"] }
ed25519-dalek = { version = "2", features = ["rand_core"] }
chacha20poly1305 = "0.10"
hkdf = "0.12"
sha2 = "0.10"
argon2 = "0.5"
base64 = "0.22"
zeroize = { version = "1", features = ["derive"] }
rand_core_06 = { package = "rand_core", version = "0.6", features = ["getrandom"] }

# Networking
tokio-tungstenite = { version = "0.26", features = ["rustls-tls-webpki-roots"] }
futures-util = "0.3"
url = "2"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
